TrialoftheTitansPackage/main/default/objects/Exam_Question__c/Exam_Question__c.object-meta.xml
<CustomObject>
    <!---->
    <label>Exam Question</label>
    <nameField>
        <label>Question Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exam Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>