TrialoftheTitansPackage/main/default/objects/Exam_Question__c/fields/Correct_Answer_s__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer_s__c</fullName>
    <label>Correct Answer(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>