TrialoftheTitansPackage/main/default/objects/Exam_Question__c/fields/Flag_Category__c.field-meta.xml
<CustomField>
    <fullName>Flag_Category__c</fullName>
    <label>Flag Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flag_Category_Picklist</valueSetName>
    </valueSet>
</CustomField>