TrialoftheTitansPackage/main/default/objects/Exam_Question__c/fields/Flag_Notes__c.field-meta.xml
<CustomField>
    <fullName>Flag_Notes__c</fullName>
    <description>This field is for users to add an explanation for why they flagged the question</description>
    <label>Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>