TrialoftheTitansPackage/main/default/objects/Exam_Question__c/fields/Flag_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Flag_Subcategory__c</fullName>
    <description>This is the sub-category picklist for flagging a question for review</description>
    <label>Flag Sub-Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flag_Subcategory_Picklist</valueSetName>
    </valueSet>
</CustomField>