TrialoftheTitansPackage/main/default/objects/Exam_Question__c/fields/IsFlagged__c.field-meta.xml
<CustomField>
    <fullName>IsFlagged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFlagged</label>
    <type>Checkbox</type>
</CustomField>