TrialoftheTitansPackage/main/default/objects/Exam_Question__c/fields/QualityAssurance__c.field-meta.xml
<CustomField>
    <fullName>QualityAssurance__c</fullName>
    <description>Quality Assurance picklist describing the path of the review process.</description>
    <label>QualityAssurancePicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Proof Reading</fullName>
            </value>
            <value>
                <fullName>Formatting</fullName>
            </value>
            <value>
                <fullName>Final Approval</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>