TrialoftheTitansPackage/main/default/objects/Exam_Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multiple Choice</fullName>
            </value>
            <value>
                <fullName>Multiple Choice - multiple answers</fullName>
            </value>
            <value>
                <fullName>True-false</fullName>
            </value>
            <value>
                <fullName>Matching</fullName>
            </value>
            <value>
                <fullName>Numerical</fullName>
            </value>
            <value>
                <fullName>Short answer</fullName>
            </value>
            <value>
                <fullName>Essay</fullName>
            </value>
            <value>
                <fullName>Missing word</fullName>
                <isActive>false</isActive>
                <label>Missing word</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>