TrialoftheTitansPackage/main/default/objects/Exam_Question__c/recordTypes/QualityAssurancePath.recordType-meta.xml
<RecordType>
    <fullName>QualityAssurancePath</fullName>
    <active>true</active>
    <description>Record Type for the Quality Assurance path.</description>
    <label>QualityAssurancePath</label>
</RecordType>