TrialoftheTitansPackage/main/default/objects/Exam_Question__c/listViews/FlaggedQueue_Exam_Question.listView-meta.xml
<ListView>
    <fullName>FlaggedQueue_Exam_Question</fullName>
    <filterScope>Queue</filterScope>
    <label>FlaggedQueue</label>
    <queue>FlaggedQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>