TrialoftheTitansPackage/main/default/objects/Exam_Question__c/listViews/QA_Format_Exam_Question.listView-meta.xml
<ListView>
    <fullName>QA_Format_Exam_Question</fullName>
    <filterScope>Queue</filterScope>
    <label>QA_Format</label>
    <queue>QA_Format</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>