TrialoftheTitansPackage/main/default/objects/Exam_Question__c/listViews/QA_Proofread_Exam_Question.listView-meta.xml
<ListView>
    <fullName>QA_Proofread_Exam_Question</fullName>
    <filterScope>Queue</filterScope>
    <label>QA_Proofread</label>
    <queue>QA_Proofread</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>